# Learning_Data_Mining

decision_tree/: .gitignore  pyproject.toml
decision_tree/tree_classification/: decision_tree.py  settings.py
random_forest/: .gitignore  pyproject.toml
random_forest/forest_classification/: random_forest.py
random_forest/forest_classification/data/: data_path.txt
